[package]
name = "testaun"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
license = "MIT"
description = "Very minimalist procedural macro to help with tests"
repository = "https://github.com/leandrosilva/testaun"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"]}
quote = "1.0"